[package]
name = "saros_imu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
#eskf = { version = "0.2.0", features = ["std", "cov-joseph", "full-reset"] }
map_3d = "0.1.5"
#nalgebra = "0.25.4"
nalgebra = "0.32.5"
